--- a/index.html
+++ b/index.html
@@ -11,8 +11,33 @@
         <nav>#</nav>
     </header>
     <main>
-        <section>
-            #
+        <section class="quote-container">
+            <div class="text-quote">
+                <h4><span>get a quote</span></h4>
+                <h2>Request A Free Quote</h2>
+                <p>Dolor sit, amet consectetur adipisicing elit. Delectus ipsam reiciendis ut aperiam accusamus cupiditate nisi exercitationem dolores minima suscipit deleniti ipsa, eaque sapiente iusto dolorem veniam tenetur voluptate recusandae quia explicabo ea! Beatae quae eum quia sequi at ratione.</p>
+                <div class="container-box">
+                    <h3><span>225</span></h3>
+                    <p>Skilled Experts</p>
+                </div>
+                <div class="container-box">
+                    <h3><span>1050</span></h3>
+                    <p>Happy Clients</p>
+                </div>
+                <div class="container-box">
+                    <h3><span>2500</span></h3>
+                    <p>Complete Projects</p>
+                </div>
+            </div>
+            <div class="box-form">
+                <form class="quote-form">
+                    <input type="text" placeholder="Your Name">
+                    <input type="email" placeholder="Your Email">
+                    <section>
+                        <option value="">Select A Service</option>
+                    </section>
+                </form>
+            </div>
         </section>
         <section>
             #
