--- a/index.html
+++ b/index.html
@@ -21,7 +21,40 @@
             #
         </section>
         <section>
-            #
+            <div>
+                <h4>DELIVERY TEAM</h4>
+                <h2>Meet Our Delivery Team</h2>
+                <div class="box-container">
+                    <article class="box-team">
+                        <div class="img">
+                            <img src="" alt="">
+                        </div>
+                        <h3>Full Name</h3>
+                        <p>Designation</p>
+                    </article>
+                    <article class="box-team">
+                        <div class="img">
+                            <img src="" alt="">
+                        </div>
+                        <h3>Full Name</h3>
+                        <p>Designation</p>
+                    </article>
+                    <article class="box-team">
+                        <div class="img">
+                            <img src="" alt="">
+                        </div>
+                        <h3>Full Name</h3>
+                        <p>Designation</p>
+                    </article>
+                    <article class="box-team">
+                        <div class="img">
+                            <img src="" alt="">
+                        </div>
+                        <h3>Full Name</h3>
+                        <p>Designation</p>
+                    </article>
+                </div>
+            </div>
         </section>
         <section>
             #
