feat: Envio da estrutura em html section quote

--- a/index.html
+++ b/index.html
@@ -33,9 +33,10 @@
                 <form class="quote-form">
                     <input type="text" placeholder="Your Name">
                     <input type="email" placeholder="Your Email">
-                    <section>
-                        <option value="">Select A Service</option>
-                    </section>
+                    <select name="opcao" id="opcao">
+                        <option value="opcao">Select A Service</option>
+                        <option value="1">Opção</option>
+                    </select>
                 </form>
             </div>
         </section>
