feat: ajustes visuais e correções no layout da seção de orçamento
- Corrigidas variáveis CSS com erro de digitação (background-color)
- Ajustado o botão com border-radius válido e efeito hover
- Centralizado o formulário na div .box-form com padding e alinhamento
- Adicionado border e transições aos inputs e selects
- Melhorado contraste da cor de texto para melhor legibilidade
- Aplicado min-height à .box-quote para melhor responsividade

--- a/index.html
+++ b/index.html
@@ -12,32 +12,41 @@
     </header>
     <main>
         <section class="quote-container">
-            <div class="text-quote">
-                <h4><span>get a quote</span></h4>
-                <h2>Request A Free Quote</h2>
-                <p>Dolor sit, amet consectetur adipisicing elit. Delectus ipsam reiciendis ut aperiam accusamus cupiditate nisi exercitationem dolores minima suscipit deleniti ipsa, eaque sapiente iusto dolorem veniam tenetur voluptate recusandae quia explicabo ea! Beatae quae eum quia sequi at ratione.</p>
-                <div class="container-box">
-                    <h3><span>225</span></h3>
-                    <p>Skilled Experts</p>
+            <div class="box-quote">
+                <div class="text-quote">
+                    <h4><span>GET A QUOTE</span></h4>
+                    <h2>Request A Free Quote</h2>
+                    <p>
+                        Dolor sit, amet consectetur adipisicing elit. Delectus ipsam reiciendis ut aperiam 
+                        accusamus cupiditate nisi exercitationem dolores minima suscipit deleniti ipsa, eaque sapiente 
+                        iusto dolorem veniam.
+                    </p>
+                    <div class="box">
+                        <div class="container-box">
+                            <h3><span>225</span></h3>
+                            <p>Skilled Experts</p>
+                        </div>
+                        <div class="container-box">
+                            <h3><span>1050</span></h3>
+                            <p>Happy Clients</p>
+                        </div>
+                        <div class="container-box">
+                            <h3><span>2500</span></h3>
+                            <p>Complete Projects</p>
+                        </div>
+                    </div>
                 </div>
-                <div class="container-box">
-                    <h3><span>1050</span></h3>
-                    <p>Happy Clients</p>
+                <div class="box-form">
+                    <form class="quote-form">
+                        <input type="text" placeholder="Your Name">
+                        <input type="email" placeholder="Your Email">
+                        <select name="opcao" id="opcao">
+                            <option value="opcao">Select A Service</option>
+                            <option value="1">Opção</option>
+                        </select>
+                        <input class="btn-quote" type="button" value="Get A Quote">
+                    </form>
                 </div>
-                <div class="container-box">
-                    <h3><span>2500</span></h3>
-                    <p>Complete Projects</p>
-                </div>
-            </div>
-            <div class="box-form">
-                <form class="quote-form">
-                    <input type="text" placeholder="Your Name">
-                    <input type="email" placeholder="Your Email">
-                    <select name="opcao" id="opcao">
-                        <option value="opcao">Select A Service</option>
-                        <option value="1">Opção</option>
-                    </select>
-                </form>
             </div>
         </section>
         <section>
