Sua mensagem de commit aqui

--- a/index.html
+++ b/index.html
@@ -57,7 +57,51 @@
             </div>
         </section>
         <section>
-            #
+            <h4>OUR BLOG</h4>
+            <h2>Latest From Blog</h2>
+            <div class="container-blog">
+                <article>
+                    <div class="box-img">
+                        <img src="" alt="">
+                    </div>
+                    <div>
+                        <ul>
+                            <li>
+                                <img src="" alt="">
+                                <p></p>
+                            </li>
+                            <li>
+                                <img src="" alt="">
+                                <p></p>
+                            </li>
+                        </ul>
+                    </div>
+                    <div>
+                        <h3>Kads tempo diam sea justo dolor</h3>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque nisi inventore, quas, alias dolor numquam voluptatem necessitatibus quis blanditiis impedit saepe reiciendis fugiat vel eveniet iure aliquam libero? Eos, et error culpa placeat tenetur nostrum sequi dicta aliquid quaerat voluptas.</p>
+                    </div>
+                </article>
+                <article>
+                    <div class="box-img">
+                        <img src="" alt="">
+                    </div>
+                    <div>
+                        <ul>
+                            <li>
+                                <img src="" alt="">
+                                <p></p>
+                            </li>
+                            <li>
+                                <img src="" alt="">
+                                <p></p>
+                            </li>
+                        </ul>
+                    </div>
+                    <h3>Kads tempor diam sea justo dolor</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem voluptate similique, quod ad vero assumenda? Dicta, est cum doloremque numquam autem reprehenderit ab porro corporis ipsa, excepturi veniam eum. Temporibus perspiciatis perferendis error delectus. Corporis autem ducimus vero delectus incidunt.</p>
+                    </div>
+                </article>
+            </div>
         </section>
     </main>
     <footer>#</footer>
