feat: adiciona imagem à landing page

--- a/index.html
+++ b/index.html
@@ -63,28 +63,28 @@
                 <div class="box-container">
                     <article class="box-team">
                         <div class="img">
-                            <img src="" alt="">
+                            <img src="./img/team-1.jpg" alt="Funcionário">
                         </div>
                         <h3>Full Name</h3>
                         <p>Designation</p>
                     </article>
                     <article class="box-team">
                         <div class="img">
-                            <img src="" alt="">
+                            <img src="./img/team-2.jpg" alt="Funcionário">
                         </div>
                         <h3>Full Name</h3>
                         <p>Designation</p>
                     </article>
                     <article class="box-team">
                         <div class="img">
-                            <img src="" alt="">
+                            <img src="./img/team-3.jpg" alt="Funcionária">
                         </div>
                         <h3>Full Name</h3>
                         <p>Designation</p>
                     </article>
                     <article class="box-team">
                         <div class="img">
-                            <img src="" alt="">
+                            <img src="./img/team-4.jpg" alt="Funcionário">
                         </div>
                         <h3>Full Name</h3>
                         <p>Designation</p>
