feat(seção-planos): cria seção de planos de preços com layout responsivo e botão de ação

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <nav>#</nav>
     </header>
     <main>
+        <!-- Seção Quote -->
         <section class="quote-container">
             <div class="box-quote">
                 <div class="text-quote">
@@ -50,15 +51,54 @@
                 </div>
             </div>
         </section>
-        <section>
-            #
+        <!-- Seção Planos -->
+        <section class="planos">
+            <div class="text-planos">
+                <h4><span>PRICING PLAN</span></h4>
+                <h2>Affordable Pricing Packages</h2>
+            </div>
+            <div class="container-planos">
+                <article class="box-planos">
+                    <h2 class="valor"><sup>$</sup>49,00</h2>
+                    <h3 class="tipo-plano">Básic</h3>
+                    <ul>
+                        <li>HTML5 & CSS3</li>
+                        <li>Bootstrap 4</li>
+                        <li>Responsive Layout</li>
+                        <li>Compatible With All Browsers</li>
+                    </ul>
+                    <button class="btn-plano" type="button">Order Now</button>
+                </article>
+                <article class="box-planos">
+                    <h2 class="valor"><sup>$</sup>99,00</h2>
+                    <h3 class="tipo-plano">Premium</h3>
+                    <ul>
+                        <li>HTML5 & CSS3</li>
+                        <li>Bootstrap 4</li>
+                        <li>Responsive Layout</li>
+                        <li>Compatible With All Browsers</li>
+                    </ul>
+                    <button class="btn-plano" type="button">Order Now</button>
+                </article>
+                <article class="box-planos">
+                    <h2 class="valor"><sup>$</sup>149,00</h2>
+                    <h3 class="tipo-plano">Business</h3>
+                    <ul>
+                        <li>HTML5 & CSS3</li>
+                        <li>Bootstrap 4</li>
+                        <li>Responsive Layout</li>
+                        <li>Compatible With All Browsers</li>
+                    </ul>
+                    <button class="btn-plano" type="button">Order Now</button>
+                </article>
+            </div>
         </section>
         <section>
             #
         </section>
         <section>
             <div>
-                <h4>DELIVERY TEAM</h4>
+                <h4><span>DELIVERY TEAM</span></h4>
                 <h2>Meet Our Delivery Team</h2>
                 <div class="box-container">
                     <article class="box-team">
@@ -93,18 +133,18 @@
             </div>
         </section>
         <section>
-            <h4>OUR BLOG</h4>
+            <h4><span>OUR BLOG</span></h4>
             <h2>Latest From Blog</h2>
             <div class="container-blog">
                 <article>
                     <div class="box-img">
-                        <img src="" alt="">
+                        <img src="./img/blog-1.jpg" alt="">
                     </div>
                     <div>
                         <ul>
                             <li>
-                                <img src="" alt="">
-                                <p></p>
+                                <img src="./img/user.jpg" alt="John Doe">
+                                <p>John Doe</p>
                             </li>
                             <li>
                                 <img src="" alt="">
@@ -114,18 +154,18 @@
                     </div>
                     <div>
                         <h3>Kads tempo diam sea justo dolor</h3>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque nisi inventore, quas, alias dolor numquam voluptatem necessitatibus quis blanditiis impedit saepe reiciendis fugiat vel eveniet iure aliquam libero? Eos, et error culpa placeat tenetur nostrum sequi dicta aliquid quaerat voluptas.</p>
+                        <p>Dolor sit amet consectetur adipisicing elit. Atque nisi inventore, quas, alias dolor numquam voluptatem necessitatibus quis blanditiis impedit saepe reiciendis fugiat vel eveniet iure aliquam libero? Eos, et error culpa placeat tenetur nostrum sequi dicta aliquid quaerat voluptas.</p>
                     </div>
                 </article>
                 <article>
                     <div class="box-img">
-                        <img src="" alt="">
+                        <img src="./img/blog-2.jpg" alt="">
                     </div>
                     <div>
                         <ul>
                             <li>
-                                <img src="" alt="">
-                                <p></p>
+                                <img src="./img/user.jpg" alt="John Doe">
+                                <p>John Doe</p>
                             </li>
                             <li>
                                 <img src="" alt="">
@@ -134,7 +174,7 @@
                         </ul>
                     </div>
                     <h3>Kads tempor diam sea justo dolor</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem voluptate similique, quod ad vero assumenda? Dicta, est cum doloremque numquam autem reprehenderit ab porro corporis ipsa, excepturi veniam eum. Temporibus perspiciatis perferendis error delectus. Corporis autem ducimus vero delectus incidunt.</p>
+                    <p>Dolor sit amet consectetur adipisicing elit. Voluptatem voluptate similique, quod ad vero assumenda? Dicta, est cum doloremque numquam autem reprehenderit ab porro corporis ipsa, excepturi veniam eum. Temporibus perspiciatis perferendis error delectus. Corporis autem ducimus vero delectus incidunt.</p>
                     </div>
                 </article>
             </div>
