feat: Barra de navegação

--- a/index.html
+++ b/index.html
@@ -8,8 +8,24 @@
     <title>Langind Page</title>
 </head>
 <body>
+    <nav>
+        <h3 class="logo">
+            <img src="" alt="">
+            FASTER
+        </h3>
+        <div class="navbar">
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Service</a></li>
+                <li><a href="#">Price</a></li>
+                <li><a href="#">Pages</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </div>
+        <button type="button" class="btn-nav">Get A Quote</button>
+    </nav>
     <header>
-        <nav>#</nav>
     </header>
     <main>
         <!-- Seção Quote -->
@@ -92,9 +108,6 @@
                     <button class="btn-plano" type="button">Order Now</button>
                 </article>
             </div>
-        </section>
-        <section>
-            #
         </section>
         <section>
             <div>
