feat: criando barra de navegação

--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
 </head>
 <body>
     <nav>
-        <h3 class="logo">
-            <img src="" alt="">
-            FASTER
-        </h3>
+        <div class="logo-box">
+            <h3 class="logo">
+                <img src="" alt="caminhão">
+                FASTER
+            </h3>
+        </div>
         <div class="navbar">
             <ul>
                 <li><a href="#">Home</a></li>
@@ -23,7 +25,9 @@
                 <li><a href="#">Contact</a></li>
             </ul>
         </div>
-        <button type="button" class="btn-nav">Get A Quote</button>
+        <div>
+            <button type="button" class="btn-nav">Get A Quote</button>
+        </div>
     </nav>
     <header>
     </header>
