feat: finaliza implementação da barra de navegação

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
     <nav>
         <div class="logo-box">
+            <img src="./img/truck.png" alt="caminhão">
             <h3 class="logo">
-                <img src="" alt="caminhão">
                 FASTER
             </h3>
         </div>
@@ -25,7 +25,7 @@
                 <li><a href="#">Contact</a></li>
             </ul>
         </div>
-        <div>
+        <div class="box-btn">
             <button type="button" class="btn-nav">Get A Quote</button>
         </div>
     </nav>
